objects/Account_Contact__c.object
<CustomObject>
    <description>Junction object linking a Contact record to an Account record.  Used so a contact can have many accounts without duplicating the contact information</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Lookup to Account object Contact is linked to.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Contacts</relationshipLabel>
        <relationshipName>Account_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether or not the contact is active for this particular account. Contacts can be made inactive on a hotel by hotel basis. A workflow rule date stamps the day the particular accountcontact was made inactive.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Lookup to Contact linking it to an Account</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Contacts</relationshipLabel>
        <relationshipName>Account_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <description>Full name of contact</description>
        <formula>Contact__r.FirstName + &apos; &apos; +  Contact__r.LastName</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Date__c</fullName>
        <description>The date an AccountContact is marked as inactive. Set automatically via a workflow rule.</description>
        <label>Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <description>Formula field to give quick and easy insight to if the AccountContact is currently synced (thus uneditable) with PSG Salesforce. Can&apos;t make a formula field a checkbox</description>
        <formula>IF(PSG_Contact_Id__c != null, &quot;Synced with PSG&quot;, &quot;Not Synced with PSG&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Integration Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <description>Hacky solution to make related list hyperlink column smaller, rather than &quot; the very wide, Account Contact: Account Contact Number&quot;</description>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id , Name, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSG_Account_Id__c</fullName>
        <description>Account Id from the PSG Org</description>
        <externalId>true</externalId>
        <label>PSG Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSG_Contact_Id__c</fullName>
        <description>The Salesforce Contact Id from the PSG Salesforce Org.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the Salesforce Contact.Id field field from the PSG Salesforce Org</inlineHelpText>
        <label>PSG Contact Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Content_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if contact is primary content contact for hotel</description>
        <label>Primary Content Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>GSOAccountID:GSOContactID

Used to enforce uniqueness. Cannot have the same contact associated with the same account.</description>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Account Contact</label>
    <nameField>
        <displayFormat>AC-{000000}</displayFormat>
        <label>Account Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cant_Edit_Integrated_Contacts</fullName>
        <active>true</active>
        <description>Only SysAdmin &amp; API can modify an AccountContact that is in sync with PSG.</description>
        <errorConditionFormula>AND( PSG_Contact_Id__c != NULL, $Profile.Name != &quot;System Administrator&quot;, $Profile.Name != &quot;API Only&quot;)</errorConditionFormula>
        <errorMessage>You can&apos;t modify an AccountContact that is currently integrated with PSG.</errorMessage>
    </validationRules>
</CustomObject>